--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -24,3 +24,8 @@
 
 /* Component Styles
  ------------------------------ */
+label:required::after{
+    content: ' *';
+    color: red;
+    font-weight: bolder
+}
