--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -8,7 +8,7 @@
 @import 'bootstrap';
 // @import './vendor/jquery-ui';
 // @import './vendor/owl.carousel.min.scss';
-@import './vendor/owl.theme.default.min.scss';
+// @import './vendor/owl.theme.default.min.scss';
 // @import './vendor/jquery.fancybox.min.scss';
 @import './vendor/bootstrap-datepicker.scss';
 @import './vendor/aos';
