--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -6,3 +6,21 @@ $fa-font-path: '~@fortawesome/fontawesome-pro/webfonts';
 @import '~@fortawesome/fontawesome-pro/scss/solid';
 @import '~@fortawesome/fontawesome-pro/scss/brands';
 @import '~@fortawesome/fontawesome-pro/scss/duotone';
+
+/* Flaticon
+-------------------------------------------------- */
+@font-face {
+    font-family: 'Flaticon';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../../font/Flaticon.eot'); /* IE9 Compat Modes */
+    src: local('Flaticon'), local('Flaticon'),
+         url('../../font/Flaticon.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('../../font/Flaticon.woff2') format('woff2'), /* Super Modern Browsers */
+         url('../../font/Flaticon.woff') format('woff'), /* Modern Browsers */
+         url('../../font/Flaticon.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('../../font/Flaticon.svg#Flaticon') format('svg'); /* Legacy iOS */
+  }
+  body {
+    font-family: 'flaticon';
+  }
