--- a/src/styles/_site-base.scss
+++ b/src/styles/_site-base.scss
@@ -80,15 +80,9 @@ body {
 		border-color: $primary;
 		color: $white;
 		&:hover {
-			background: $black;
-			border-color: $black;
+			background: darken($primary, 7.5%);
+			border-color: darken($primary, 7.5%);
 			color: $white;
-		}
-		&.btn-black--hover {
-			&:hover {
-				background: lighten($black, 40%);
-				color: $white;
-			}
 		}
 	}
 	
@@ -328,4 +322,8 @@ body {
 		appearance: none;
 		width: 100%;
 	}
+}
+
+.text-accent{
+	color: $primary;
 }
