Ovveride  primary colour

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -15,6 +15,10 @@
 
 @import './typography';
 
+/* Bootstrap primary colour override
+ ------------------------------ */
+$primary: #0056b3;
+
 /* Theme Styles
  ------------------------------ */
 @import "site-base";
