--- a/src/styles/_site-navbar.scss
+++ b/src/styles/_site-navbar.scss
@@ -5,7 +5,7 @@
 	position: absolute;
 	top: 0;
 	width: 100%;
-	// background: $white;
+	background: rgba($black,.5);
 	border-bottom: rgba($white,.7);
 
 	.site-logo {
