--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -7,20 +7,6 @@ $fa-font-path: '~@fortawesome/fontawesome-pro/webfonts';
 @import '~@fortawesome/fontawesome-pro/scss/brands';
 @import '~@fortawesome/fontawesome-pro/scss/duotone';
 
-/* Roboto Mono
+/* Roboto
 -------------------------------------------------- */
-@font-face {
-  font-family: 'Roboto Mono';
-  font-style: normal;
-  font-weight: 400;
-  src: url('/font/roboto-mono-v8-latin-regular.eot'); /* IE9 Compat Modes */
-  src: local(''),
-       url('/font/roboto-mono-v8-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('/font/roboto-mono-v8-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('/font/roboto-mono-v8-latin-regular.woff') format('woff'), /* Modern Browsers */
-       url('/font/roboto-mono-v8-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('/font/roboto-mono-v8-latin-regular.svg#RobotoMono') format('svg'); /* Legacy iOS */
-}
-  body {
-    font-family: 'Roboto Mono';
-  }
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;1,400&display=swap');
