Finished upgrade to navbar

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -25,7 +25,7 @@ $primary: #0056b3;
 @import "site-navbar";
 @import "site-blocks";
 @import "Project";
-
+@import "Nav";
 
 /* Component Styles
  ------------------------------ */
