--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -24,6 +24,7 @@ $primary: #0056b3;
 @import "site-base";
 @import "site-navbar";
 @import "site-blocks";
+@import "Main";
 @import "Project";
 @import "Nav";
 
