--- a/src/styles/Nav.scss
+++ b/src/styles/Nav.scss
@@ -31,6 +31,11 @@
 .scrolled {
     background: white;
     box-shadow: 0 2px 2px -2px rgba(0,0,0,.2);
+
+    .menu-icon {
+        color: black;
+        font-size: larger;
+    }
     
     a {
         color: black;
