--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -21,6 +21,7 @@ $primary: #0056b3;
 @import "Main";
 @import "Project";
 @import "Nav";
+@import "Footer";
 
 /* Component Styles
  ------------------------------ */
