--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -1,12 +1,12 @@
 /* Font Awesome
--------------------------------------------------- */
-$fa-font-path: '~@fortawesome/fontawesome-pro/webfonts';
-@import '~@fortawesome/fontawesome-pro/scss/fontawesome';
-@import '~@fortawesome/fontawesome-pro/scss/regular';
-@import '~@fortawesome/fontawesome-pro/scss/solid';
-@import '~@fortawesome/fontawesome-pro/scss/brands';
-@import '~@fortawesome/fontawesome-pro/scss/duotone';
+// -------------------------------------------------- */
+$fa-font-path: "../Vendor/FontAwesome/webfonts";
+//@import '../Vendor/FontAwesome/scss/duotone.scss';
+@import "../Vendor/FontAwesome/scss/brands";
+@import "../Vendor/FontAwesome/scss/light";
+@import "../Vendor/FontAwesome/scss/regular";
+@import "../Vendor/FontAwesome/scss/solid";
 
 /* Roboto
 -------------------------------------------------- */
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;1,400&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;1,400&display=swap");
