--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -10,21 +10,14 @@
     color: lighten($black, 50%);
   }
 
-  i {
+  .fa-layers {
     color: lighten($black, 50%);
-    font-size: 20px;
-    text-align: center;
-    text-decoration: none;
-    margin: 0px 10px;
-    padding: 9px 11px;
-    border-radius: 50%;
-    border: solid 0.5px lighten($black, 50%);
     transition: ease-in-out 0.3s;
+    border-radius: 50%;
   }
 
-  i:hover {
+  .fa-layers:hover {
     color: whitesmoke !important;
     background: darken($primary, 7.5%);
-    border-color: darken($primary, 7.5%);
   }
 }
