--- a/src/styles/Main.scss
+++ b/src/styles/Main.scss
@@ -1,59 +1,61 @@
 .text-accent {
-	color: $primary;
+  color: $primary;
 }
 
 .app-badge {
-	width: 100%;
+  width: 100%;
+}
+
+.error-spacer {
+  height: 20vh;
 }
 
 .row.error {
-	i.fad.fa-sad-tear{
-		padding-top: 3rem;
-		margin-top: 3rem;
-	}
+  i.fad.fa-sad-tear {
+    padding-top: 3rem;
+    margin-top: 3rem;
+  }
 
-	i.fad.fa-bug{
-		padding-top: 3rem;
-		margin-top: 3rem;
-	}
+  i.fad.fa-bug {
+    padding-top: 3rem;
+    margin-top: 3rem;
+  }
 
-	text-align: center;
-	padding:  3rem 0;
-	margin-bottom: 3rem;
+  text-align: center;
 }
 
 .scrollUp {
-	display: -webkit-flex;
-	display: -moz-flex;
-	display: -ms-flex;
-	display: -o-flex;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	font-size: 35px;
-	text-decoration: none;
-	opacity: 0;
-	pointer-events: none;
-	transition: .5s;
-	background: $primary;
-	position: fixed;
-	bottom: 16px;
-	right: 32px;
-	height: 60px;
-	width: 60px;
-	border-radius: 5px;
-	z-index: 100;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flex;
+  display: -o-flex;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 35px;
+  text-decoration: none;
+  opacity: 0;
+  pointer-events: none;
+  transition: 0.5s;
+  background: $primary;
+  position: fixed;
+  bottom: 16px;
+  right: 32px;
+  height: 60px;
+  width: 60px;
+  border-radius: 5px;
+  z-index: 100;
 }
 
-.scrollUp.active {	
-	color: #ffffff;
-	bottom: 32px;
-	pointer-events: auto;
-	opacity: 1;
-	transform: translateY(-55px);
+.scrollUp.active {
+  color: #ffffff;
+  bottom: 32px;
+  pointer-events: auto;
+  opacity: 1;
+  transform: translateY(-55px);
 }
 
 .expander {
-	height: auto;
-	min-height: calc(100vh - 164px);
+  height: auto;
+  min-height: calc(100vh - 203.78px);
 }
