Initial work on creating a Modal

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -19,6 +19,7 @@ $primary: #0056b3;
 @import "site-navbar";
 @import "site-blocks";
 @import "Main";
+@import "Modal";
 @import "Project";
 @import "Nav";
 @import "Footer";
